--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -13,12 +13,17 @@
 </head>
 
 <body>
-	<div class="container">
+		
+  <div class="container">
 		<div class="jumbotron">
 			<h1>Michael Bernstein</h1>
 			<p>human-computer interaction &middot; social computing &middot; crowdsourcing</p>
 		</div>
+		
+		{{#if min}}
+		Min! <button class="likeBtn">Like</button>
 
+		{{else}}
 		<h4>Projects</h4>
 		{{#each projects}}
 			<div class="project" id="{{id}}">
@@ -32,10 +37,24 @@
 				</div>
 			</div>
 		{{/each}}
+		{{/if}}
 
 
 	<script src="https://code.jquery.com/jquery.js"></script>
 	<script src="/js/bootstrap.min.js"></script>
 	<script src="/js/introHCI.js"></script>
+
+	<script>
+			  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+				  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new
+					Date();a=s.createElement(o),
+					  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+						  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+							  ga('create', 'UA-92530930-1', 'auto');
+								  ga('send', 'pageview');
+
+							</script>
+
 </body>
 </html>
